Ajout des fonctionnalités